[project]
name = "agent-browser-py"
version = "0.3.0"
description = "Python wrapper for agent-browser CLI - Browser automation for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "benedict>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_browser"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "lxml>=6.0.2",
    "marimo>=0.19.4",
    "pandas>=3.0.1",
    "pdbsublimetextsupport>=0.2",
    "playwright>=1.58.0",
    "pyinstrument>=5.1.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
    "typer>=0.24.0",
]
